--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Used to save images locally</string>
+    <key>NSMusicLibraryUsageDescription</key>
+    <string>Used to save music locally</string>
+    <key>NSDocumentDirectoryUsageDescription</key>
+    <string>Used to store downloadable content</string>
 </dict>
 </plist>
