--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   image_picker: ^1.0.4
   file_picker: ^6.1.1
   open_filex: ^4.3.4
+  flutter_bloc: ^8.1.5
+  path_provider: ^2.1.3
+
 
 dev_dependencies:
   hive_generator: ^2.0.1
