--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   open_filex: ^4.3.4
   flutter_bloc: ^8.1.5
   path_provider: ^2.1.3
+  flutter_secure_storage: ^9.0.0
 
 
 dev_dependencies:
