WIP openai works, getting models work getting models for groq works

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   uuid: ^4.2.1
   langchain: ^0.0.13
   envied: ^0.3.0+3
-  dart_openai: ^4.0.0
+  dart_openai: ^5.1.0
   langchain_openai: ^0.0.14+1
   mockito: ^5.4.2
   flutter_chat_ui: ^1.6.10
@@ -81,10 +81,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  # To add assets to yours application, add an assets section, like this:
+  assets:
+    - assets/images/openai-logo.png
+    - assets/images/groq-logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
