--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   flutter_bloc: ^8.1.5
   path_provider: ^2.1.3
   flutter_secure_storage: ^9.0.0
+  url_launcher: ^6.2.6
 
 
 dev_dependencies:
