--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   path_provider: ^2.1.3
   flutter_secure_storage: ^9.0.0
   url_launcher: ^6.2.6
+  font_awesome_flutter: ^10.7.0
 
 
 dev_dependencies:
