--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ flutter:
     - assets/images/groq-logo.png
     - assets/images/dyr-logo.png
     - assets/images/ce-logo.png
+    - assets/images/perplexity-logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
