--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   url_launcher: ^6.2.6
   font_awesome_flutter: ^10.7.0
+  flutter_gemini: ^2.0.3
 
 
 dev_dependencies:
@@ -90,6 +91,7 @@ flutter:
     - assets/images/dyr-logo.png
     - assets/images/ce-logo.png
     - assets/images/perplexity-logo.png
+    - assets/images/gemini-logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
