--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 0.0.2+2
 
 environment:
-  sdk: '>=3.1.5 <4.0.0'
+  sdk: '>=3.4.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -41,28 +41,40 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   uuid: ^4.2.1
-  langchain: ^0.0.13
-  envied: ^0.3.0+3
-  dart_openai: ^5.1.0
-  langchain_openai: ^0.0.14+1
+  langchain: ^0.8.1
+  envied: ^1.3.2
+  dart_openai: ^6.1.1
+  langchain_openai: ^0.8.1+1
   mockito: ^5.4.2
-  flutter_chat_ui: ^1.6.10
+  flutter_chat_ui: ^2.11.1
+  flutter_chat_types: ^3.6.2
   image_picker: ^1.0.8
-  file_picker: ^6.1.1
-  open_filex: ^4.3.4
-  flutter_bloc: ^8.1.5
+  flutter_bloc: ^9.1.1
   path_provider: ^2.1.3
-  flutter_secure_storage: ^9.0.0
+  flutter_secure_storage: ^10.0.0
   url_launcher: ^6.2.6
   font_awesome_flutter: ^10.7.0
-  flutter_gemini: ^2.0.3
+  flutter_gemini: ^3.0.0
+  genui: ^0.6.1
+  genui_google_generative_ai: ^0.6.1
+  dart_mcp: ^0.4.0
+  mcp_client: ^1.0.0
+  speech_to_text: ^7.3.0
+  flutter_tts: ^4.2.5
+  geolocator: ^14.0.2
+  camera: ^0.11.3
+  json_schema_builder: ^0.1.3
+
+dependency_overrides:
+  win32: 5.15.0
+  intl: ^0.20.2
 
 
 dev_dependencies:
   hive_generator: ^2.0.1
   build_runner: ^2.4.6
   json_serializable: ^6.7.1
-  envied_generator: ^0.3.0+3
+  envied_generator: ^1.1.1
   flutter_test:
     sdk: flutter
 
@@ -71,7 +83,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
