--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   geolocator: ^14.0.2
   camera: ^0.11.3
   json_schema_builder: ^0.1.3
+  google_generative_ai: ^0.4.7
 
 dependency_overrides:
   win32: 5.15.0
