--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   camera: ^0.11.3
   json_schema_builder: ^0.1.3
   google_generative_ai: ^0.4.7
+  flutter_markdown: ^0.7.7+1
 
 dependency_overrides:
   win32: 5.15.0
