--- a/ios/Podfile
+++ b/ios/Podfile
@@ -41,6 +41,12 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
     target.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+      # Enable calendar permissions for permission_handler
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+        '$(inherited)',
+        'PERMISSION_EVENTS=1',
+        'PERMISSION_EVENTS_FULL_ACCESS=1',
+      ]
     end
   end
   installer.pods_project.build_configurations.each do |config|
