--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,9 @@ dependencies:
   json_schema_builder: ^0.1.3
   google_generative_ai: ^0.4.7
   flutter_markdown: ^0.7.7+1
+  device_calendar: ^4.3.3
+  permission_handler: ^11.3.1
+  timezone: ^0.9.4
 
 dependency_overrides:
   win32: 5.15.0
