--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ dependencies:
   device_calendar: ^4.3.3
   permission_handler: ^11.3.1
   timezone: ^0.9.4
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
 
 dependency_overrides:
   win32: 5.15.0
